# Files_processing_with_Rust

./: .gitignore  Cargo.toml  README.md
data/csv/: README.md
data/text/: README.md  poem.txt
src/: lib.rs  lib.rss  main.rs
