[package]
name = "filerw"
version = "0.1.0"
authors = ["dmitri9149 <dmitri.as.name@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10"}
tokio = { version = "0.2", features = ["full"] }
error-chain = "0.12.2"
zip = "0.5.8"
csv = "1.1.5"
